# MediaCodecDemo

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lwl/mediacodectest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: idr_2.7k.h264  idr_8k.h264
app/src/main/cpp/: H264ToJPEG.c  H264ToJPEG.h  H264ToRgb.c  H264ToRgb.h  IjkffmpegCmd_jni.cpp  mylog.h
app/src/main/java/com/lwl/mediacodectest/: App.kt  DecoderActivity.java  EncoderIdrActivity.kt  H264ToJPEGActivity.kt  LockActivity.kt  MainActivity.kt  MediaCodecThread.java  MediaCodecUtil.java  MediaCodecUtils.kt  PrintMediaCodecConfigActivity.kt  ScrollingActivity.kt
app/src/main/res/layout/: activity_decoder.xml  activity_main.xml  activity_scrolling.xml
app/src/main/res/menu/: menu_scrolling.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lwl/mediacodectest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
